<resources>
    <string name="app_name">SmartKey</string>
    <string name="offline">No se ha podido establecer comunicación con la base de datos debido a un problema
    de conectividad, por favor, asegúrese de que tiene acceso a internet e inténtelo de nuevo.</string>
    <string name="closeapp">Cerrar aplicación</string>
    <string name="resume">Continuar</string>
    <string name="cancel">Cancelar</string>
    <string name="offlinetitle">Sin conexión</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="bt1">1</string>
    <string name="bt2">2</string>
    <string name="bt3">3</string>
    <string name="bt4">4</string>
    <string name="bt5">5</string>
    <string name="bt6">6</string>
    <string name="bt7">7</string>
    <string name="bt8">8</string>
    <string name="bt9">9</string>
    <string name="bt0">0</string>
    <string name="btx">x</string>
    <string name="btCambiarPIN">¿Has olvidado tu PIN?</string>
    <string name="tituloPIN">Introduce el PIN</string>
    <string name="pinincorrecto">ERROR</string>
    <string name="textopinincorrecto">Se ha equivocado al introducir el PIN, inténtelo de nuevo</string>
    <string name="confirmacionpinincorrecto">De acuerdo</string>
    <string name="titulocambiarpin">ATENCIÓN</string>
    <string name="mensajecambiarpin">¿Desea recibir un correo electrónico con su nuevo PIN?</string>
    <string name="confirmarcambiarpin">Sí</string>
    <string name="cancelarcambiarpin">No</string>
    <string name="numerotelefono">Introduzca su número de teléfono</string>
    <string name="escribeTelefono">Escriba su número de teléfono con su prefijo correspondiente</string>
    <string name="siguiente">Siguiente</string>
    <string name="ponerTelefono">Teléfono</string>
    <string name="ponerEmail">Email</string>
    <string name="ponerUsername">Nombre de usuario</string>
    <string name="ponerCodigo">Código</string>
    <string name="porfavorTelefono">Debe introducir su número de teléfono para continuar</string>
    <string name="verificationFail">Se ha producido un error, compruebe los datos</string>
    <string name="verificationquota">La cuota de SMS ha sido excedida, por favor, inténtelo más tarde</string>
    <string name="verificationinvalid">Petición inválida</string>
    <string name="credentialfail">Se ha producido un error al intentar iniciar sesión</string>
    <string name="verificarcodigo">Escriba su código</string>
    <string name="verificaremail">Escriba su email</string>
    <string name="verificarusername">Escriba su nombre de usuario</string>
    <string name="verificarpin">Escriba su PIN</string>
    <string name="escribecodigo">Le hemos enviado a su teléfono un SMS con un código para verificar la cuenta</string>
    <string name="escribeemail">Esta dirección será esencial si desea cambiar su PIN en un futuro</string>
    <string name="escribeusername">Este nombre de usuario será visible por los demás</string>
    <string name="escribepin">El PIN debe estar formado por 4 números</string>
    <string name="volver">Volver</string>
    <string name="ponerPIN">PIN</string>
    <string name="repetirPIN">Repetir PIN</string>
    <string name="verificar">Verificar</string>
    <string name="recuerdaprefijo">Recuerde, debe escribirlo con su prefijo correspondiente</string>
    <string name="errorRegister">Se ha producido un error al comprobar si el usuario existe</string>
    <string name="correovalido">Debe escribir un correo válido</string>
    <string name="nombrevalido">El nombre de usuario debe tener al menos 6 letras y no puede empezar por un espacio en blanco</string>
    <string name="longitudpin">El primer campo debe tener un PIN de 4 dígitos</string>
    <string name="longitudreppin">El segundo campo debe tener un PIN de 4 dígitos</string>
    <string name="coincidirpin">No coinciden ambos campos</string>
    <string name="faltandatos">Asegúrese de haber introducido su teléfono, nombre, correo y PIN correctamente</string>
</resources>
